--- a/index.html
+++ b/index.html
@@ -59,6 +59,103 @@
                 <i class="menu_bars fa-solid fa-bars"></i>
             </div>
         </header>
+        <!-- Newshub body -->
+        <div class="newshub_body">
+            <!-- Section 1 -->
+            <section class="newshub_body_header">
+                <!-- Section 1 left  -->
+                <div class="newshub_body_header_left">
+                    <div class="newshub_hot_img">
+                        <img class="img_hot" src="./image/img_news/imgs_hot/newshub_hot_1.jpg" alt="img">
+                        <div class="img_up_down">
+                            <div class="img_top"><i class="icon fa-solid fa-angle-up"></i></div>
+                            <div class="img_down"><i class="icon fa-solid fa-angle-down"></i></div>
+                        </div>
+                    </div>
+
+                    <div class="newshub_hot_content">
+                        <div class="hot_content_present news_seeing">
+                            <h3 class="hot_content_title">Trồng ớt A Riêu đặc sản </h3>
+                            <p class="hot_content_body">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta error magnam omnis quia asperiores perferendis, illum repellendus minus aspernatur esse debitis sint excepturi corporis sapiente sit? Officia incidunt dicta quod?
+                            </p>
+                            <p class="hot_content_footer">
+                                Thời sự
+                                <i class="hot_content_cmt fa-solid fa-comment"></i>
+                                <span>54</span>
+                            </p>
+                        </div>
+                        <div class="hot_content_present">
+                            <h3 class="hot_content_title">Trồng ớt A Riêu đặc sản</h3>
+                            <p class="hot_content_body">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta error magnam omnis quia asperiores perferendis, illum repellendus minus aspernatur esse debitis sint excepturi corporis sapiente sit? Officia incidunt dicta quod?
+                            </p>
+                            <p class="hot_content_footer">
+                                Thời sự
+                                <i class="hot_content_cmt fa-solid fa-comment"></i>
+                                <span>54</span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Section 1 right (Clock) -->
+                <div class="newshub_clock">
+                    <div class="clock_outline">
+                        <div href="ou.edu.vn" class="clock_hour">07</div>
+                        <div class="clock_hour_wall">
+                            <div class="hour_wall"></div>
+                            <div class="hour_wall"></div>
+                        </div>
+                        <div class="clock_hour">30</div>
+                    </div>
+
+                    <div class="widget">
+                        <div class="simplize-widget-chart-overview">
+                            <script type="text/javascript" src="https://static.simplize.vn/static/widget/simplize-widget-v0.0.2.min.js" async>
+                            {"tickers":[{"ticker":"VCB","type":"stock"}],"default_time_frame":"1M","time_frames":["1M"],"theme":"dark","size":{"width":"400","height":"250"},"auto_size":false,"font":"Inter","text_color":"#F4F4F5","text_color_chart":"#F4F4F5","background_color":"#191919","tab_colors":{"active":"#006CEC","default":"#252525"},"chart_height":100,"show_price_chart":true,"show_fi":true,"chart_type":"candle","chart_line_color":"#EC8000","chart_candle_color":["#25B770","#E14040"],"fi":[]}
+                            </script>
+                            </div>
+                    </div>
+                </div>
+            </section>
+            <section class="newshub_body_main">
+                <div class="newshub_main_content">
+                        <ul class="newshub_subjects">
+                            <li class="newshub_subjects_item">Kinh doanh</li>
+                            <li class="newshub_subjects_item">Trong nước</li>
+                            <li class="newshub_subjects_item">Quốc tế</li>
+                            <li class="newshub_subjects_item">Dân sinh</li>
+                        </ul>
+
+                        <div class="newshub_subject">
+                            <div class="newshub_subject_content">
+                                <img class="img_main" alt="" src="./image/img_news/imgs_main/img_main_1.jpg">
+                                <div class="content">
+                                    <h3>Nhiều quốc gia sục giảm dân số nhanh chóng</h3>
+                                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis praesentium vitae adipisci nemo. Fugit, libero a recusandae sit perspiciatis sint maxime praesentium dignissimos dolorem qui delectus! Cupiditate enim libero veniam!</p>
+                                </div>
+                                <div class="content content_right">
+                                    <h3>Người biểu tình trước hàng rào an ninh đại hội đảng Dân chủ</h3>
+                                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis praesentium vitae adipisci nemo. Fugit, libero a recusandae sit perspiciatis sint maxime praesentium dignissimos dolorem qui delectus! Cupiditate enim libero veniam!</p>
+                                </div>
+                            </div>
+
+                            <ul class="newshub_subjects_list">
+                                <li class="newshub_subjects_sup">
+                                    <img class="img_main_sup" src="./image/img_news/imgs_main/img_main_1.jpg" alt="">
+                                    <h3>Nga lập thêm ba đội quân ở biên giới</h3>
+                                </li>
+                                <li class="newshub_subjects_sup"></li>
+                                <li class="newshub_subjects_sup"></li>
+                            </ul>
+                        </div>
+                </div>
+                <div class="newshub_list_news">
+                </div>
+            </section>
+            <section class="newshub_body_sup"></section>
+        </div>
     </div>
 </body>
 </html>
