--- a/index.html
+++ b/index.html
@@ -123,7 +123,14 @@
                     <i class="icon_home fa-solid fa-house"></i>
                 </div>
                 <ul class="menu_list">
-                    <li class="menu_items">Thời sự</li>
+                    <li class="menu_items">
+                        Thời sự
+                        <ul class="menu_items_support">
+                            <li class="menu_items_item">Chính trị</li>
+                            <li class="menu_items_item">Giao thông</li>
+                            <li class="menu_items_item">Khoa học</li>
+                        </ul>
+                    </li>
                     <li class="menu_items">Thế giới</li>
                     <li class="menu_items">Video</li>
                     <li class="menu_items">Kinh doanh</li>
