--- a/index.html
+++ b/index.html
@@ -133,18 +133,17 @@
                     </div>
                 </a>
                 <ul class="menu_list">
-                    <li class="menu_items"><a href="#" class="news">Thời sự</a></li>
-                    <li class="menu_items"><a href="#" class="world">Thế giới</a></li>
-                    <li class="menu_items"><a href="#" class="video">Video</a></li>
-                    <li class="menu_items"><a href="#" class="business">Kinh doanh</a></li>
-                    <li class="menu_items"><a href="#" class="law">Pháp luật</a></li>
-                    <li class="menu_items"><a href="#" class="science">Khoa học</a></li>
-                    <li class="menu_items"><a href="#" class="entertainment">Giải trí</a></li>
-                    <li class="menu_items"><a href="#" class="sport">Thể thao</a></li>
-                    <li class="menu_items"><a href="#" class="education">Giáo dục</a></li>
-                    <li class="menu_items"><a href="#" class="health">Sức khỏe</a></li>
-                    <li class="menu_items"><a href="#" class="life">Đời sống</a></li>
-                    <li class="menu_items"><a href="#" class="travel">Du lịch</a></li>
+                    <li class="menu_items"><a href="./subject.html" class="news">Thời sự</a></li>
+                    <li class="menu_items"><a href="./subject.html" class="world">Thế giới</a></li>
+                    <li class="menu_items"><a href="./subject.html" class="business">Kinh doanh</a></li>
+                    <li class="menu_items"><a href="./subject.html" class="law">Pháp luật</a></li>
+                    <li class="menu_items"><a href="./subject.html" class="science">Khoa học</a></li>
+                    <li class="menu_items"><a href="./subject.html" class="entertainment">Giải trí</a></li>
+                    <li class="menu_items"><a href="./subject.html" class="sport">Thể thao</a></li>
+                    <li class="menu_items"><a href="./subject.html" class="education">Giáo dục</a></li>
+                    <li class="menu_items"><a href="./subject.html" class="health">Sức khỏe</a></li>
+                    <li class="menu_items"><a href="./subject.html" class="life">Đời sống</a></li>
+                    <li class="menu_items"><a href="./subject.html" class="travel">Du lịch</a></li>
                 </ul>
                 <i class="menu_bars fa-solid fa-bars"></i>
                 <div class="menu_container">
