--- a/subject.html
+++ b/subject.html
@@ -9,8 +9,8 @@
     <link rel="shortcut icon" href="./image/background/logo.png">
     <link rel="stylesheet" href="./css/reponsive.css">
     <link rel="stylesheet" href="./css/subject.css">
-    <title>NEWSHub</title>
-    <script src="./js/main.js" type="text/javascript"></script>
+    <title>NEWSHub>Subject</title>
+    <script src="./js/data.js" type="text/javascript"></script>
 </head>
 <body>
     <div class="newshub">
@@ -134,18 +134,17 @@
                     </div>
                 </a>
                 <ul class="menu_list">
-                    <li class="menu_items"><a href="#" class="news">Thời sự</a></li>
-                    <li class="menu_items"><a href="#" class="world">Thế giới</a></li>
-                    <li class="menu_items"><a href="#" class="video">Video</a></li>
-                    <li class="menu_items"><a href="#" class="business">Kinh doanh</a></li>
-                    <li class="menu_items"><a href="#" class="law">Pháp luật</a></li>
-                    <li class="menu_items"><a href="#" class="science">Khoa học</a></li>
-                    <li class="menu_items"><a href="#" class="entertainment">Giải trí</a></li>
-                    <li class="menu_items"><a href="#" class="sport">Thể thao</a></li>
-                    <li class="menu_items"><a href="#" class="education">Giáo dục</a></li>
-                    <li class="menu_items"><a href="#" class="health">Sức khỏe</a></li>
-                    <li class="menu_items"><a href="#" class="life">Đời sống</a></li>
-                    <li class="menu_items"><a href="#" class="travel">Du lịch</a></li>
+                    <li class="menu_items"><a href="./subject.html" class="news">Thời sự</a></li>
+                    <li class="menu_items"><a href="./subject.html" class="world">Thế giới</a></li>
+                    <li class="menu_items"><a href="./subject.html" class="business">Kinh doanh</a></li>
+                    <li class="menu_items"><a href="./subject.html" class="law">Pháp luật</a></li>
+                    <li class="menu_items"><a href="./subject.html" class="science">Khoa học</a></li>
+                    <li class="menu_items"><a href="./subject.html" class="entertainment">Giải trí</a></li>
+                    <li class="menu_items"><a href="./subject.html" class="sport">Thể thao</a></li>
+                    <li class="menu_items"><a href="./subject.html" class="education">Giáo dục</a></li>
+                    <li class="menu_items"><a href="./subject.html" class="health">Sức khỏe</a></li>
+                    <li class="menu_items"><a href="./subject.html" class="life">Đời sống</a></li>
+                    <li class="menu_items"><a href="./subject.html" class="travel">Du lịch</a></li>
                 </ul>
                 <i class="menu_bars fa-solid fa-bars"></i>
                 <div class="menu_container">
@@ -228,59 +227,14 @@
                 <div class="newshub_main_head">
                     <div class="newshub_main_content">   
                         <div class="newshub_sub_big">                          
-                            <ul class="newshub_subjects">
-                                <li class="newshub_subjects_item"><a href="#" style="color: red;">Thời sự</a></li>
-                                <li class="newshub_subjects_item"><a href="#" class="normal">Chính trị</a></li>
-                                <li class="newshub_subjects_item"><a href="#" class="normal">Dân sinh</a></li>
-                                <li class="newshub_subjects_item"><a href="#" class="normal">Cuộc sống</a></li>
+                            <ul id="subjectMain" class="newshub_subjects">
+                                <!--  -->
                             </ul>
-                            <div class="subject_main">
-                                <div class="newshub_sub_left">
-                                    <img src="./image/img_news/imgs_main/business_01.jpg" alt="">
-                                    <div class="subject_content">
-                                        <h3><a href="#" class="news">Ông Tô Ân Xô và Trần Đăng Quỳnh làm trợ lý Tổng Bí thư, Chủ tịch nước Tô Lâm</a></h3>
-                                        <p><a href="#" class="normal">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima nemo voluptas nulla, quasi dolore illo at nam perspiciatis nesciunt, tenetur numquam. Dolore libero molestias sed, voluptas rerum ducimus a hic?</a></p>
-                                    </div>
-                                </div>
-                                <ul class="newshub_sub_right">
-                                    <li class="sub_right_item">
-                                        <h3><a href="#" class="news">Ông Tô Ân Xô và Trần Đăng Quỳnh làm trợ lý Tổng Bí thư, Chủ tịch nước Tô Lâm</a></h3>
-                                        <p><a href="#" class="normal">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima nemo voluptas nulla, quasi dolore illo at nam perspiciatis nesciunt, tenetur numquam. Dolore libero molestias sed, voluptas rerum ducimus a hic?</a></p>
-                                    </li>
-                                    <li class="wall"></li>
-                                    <li class="sub_right_item">
-                                        <h3><a href="#" class="news">Ông Tô Ân Xô và Trần Đăng Quỳnh làm trợ lý Tổng Bí thư, Chủ tịch nước Tô Lâm</a></h3>
-                                        <p><a href="#" class="normal">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima nemo voluptas nulla, quasi dolore illo at nam perspiciatis nesciunt, tenetur numquam. Dolore libero molestias sed, voluptas rerum ducimus a hic?</a></p>
-                                    </li>
-                                    <li class="wall"></li>
-                                    <li class="sub_right_item">
-                                        <h3><a href="#" class="news">Ông Tô Ân Xô và Trần Đăng Quỳnh làm trợ lý Tổng Bí thư, Chủ tịch nước Tô Lâm</a></h3>
-                                        <p><a href="#" class="normal">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima nemo voluptas nulla, quasi dolore illo at nam perspiciatis nesciunt, tenetur numquam. Dolore libero molestias sed, voluptas rerum ducimus a hic?</a></p>
-                                    </li>
-                                </ul>
+                            <div id="section1" class="subject_main">
+                                <!--  -->
                             </div>
-                            <div class="subject_add">
-                                <div class="newshub_sub_top">
-                                    <img src="./image/img_news/imgs_main/business_02.jpg" alt="">
-                                    <div class="subject_content">
-                                        <h3><a href="#" class="news">Ông Tô Ân Xô và Trần Đăng Quỳnh làm trợ lý Tổng Bí thư, Chủ tịch nước Tô Lâm</a></h3>
-                                        <p><a href="#" class="normal">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima nemo voluptas nulla, quasi dolore illo at nam perspiciatis nesciunt, tenetur numquam. Dolore libero molestias sed, voluptas rerum ducimus a hic?</a></p>
-                                    </div>
-                                </div>
-                                <ul class="newshub_sub_under">
-                                    <li class="subject_under_item">
-                                        <img src="./image/img_news/imgs_main/business_03.jpg" alt="">
-                                        <h3><a href="#" class="news">Ông Tô Ân Xô và Trần Đăng Quỳnh làm trợ lý Tổng Bí thư, Chủ tịch nước Tô Lâm</a></h3>
-                                    </li>
-                                    <li class="subject_under_item">
-                                        <img src="./image/img_news/imgs_main/business_04.jpg" alt="">
-                                        <h3><a href="#" class="news">Ông Tô Ân Xô và Trần Đăng Quỳnh làm trợ lý Tổng Bí thư, Chủ tịch nước Tô Lâm</a></h3>
-                                    </li>
-                                    <li class="subject_under_item">
-                                        <img src="./image/img_news/imgs_main/business_05.jpg" alt="">
-                                        <h3><a href="#" class="news">Ông Tô Ân Xô và Trần Đăng Quỳnh làm trợ lý Tổng Bí thư, Chủ tịch nước Tô Lâm</a></h3>
-                                    </li>    
-                                </ul>
+                            <div id="section2" class="subject_add">
+                                <!--  -->
                             </div>
                         </div>
                         <!-- Right -->
@@ -374,5 +328,6 @@
             <div class="newshub_footer_footer">&copy;2024 Bản quyền thuộc về NEWSHub</div>
         </footer>
     </div>
+    <script src="./js/main.js" type="text/javascript"></script>
 </body>
 </html>
